--- a/ADNI_Brain_Visual_Transformer_47306725.ipynb
+++ b/ADNI_Brain_Visual_Transformer_47306725.ipynb
@@ -232,7 +232,7 @@
       "source": [
         "def loadData():\n",
         "    \"\"\"\n",
-        "    Loads the dataset that will be used into Tensorflow datasets.\n",
+        "    Loading the dataset.\n",
         "    \"\"\"\n",
         "    trainData = tf.keras.preprocessing.image_dataset_from_directory(\n",
         "        DATA_LOAD_DEST + \"/train\", labels='inferred', label_mode='binary',\n",
@@ -246,7 +246,7 @@
         "        batch_size=BATCH_SIZE, seed=8, class_names=['AD', 'NC']\n",
         "    )\n",
         "\n",
-        "    # Augment data\n",
+        "    # Augmenting data\n",
         "    normalize = tf.keras.layers.Normalization()\n",
         "    flip = tf.keras.layers.RandomFlip(mode='horizontal', seed=8)\n",
         "    rotate = tf.keras.layers.RandomRotation(factor=0.02, seed=8)\n",
@@ -263,7 +263,7 @@
         "    # Taking half of the 9000 images from the test set as validation data\n",
         "    validationData = testData.take(len(list(testData))//2)\n",
         "\n",
-        "    # Using remaining 4500 images as test set\n",
+        "    # Using remaining images as test set\n",
         "    testData = testData.skip(len(list(testData))//2)\n",
         "\n",
         "    return trainData, validationData, testData"
@@ -297,7 +297,7 @@
       "source": [
         "class PatchLayer(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for shifting inputted images and transforming images into patches.\n",
+        "\tLayering and transforming images into patches.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, img_size, patch_size, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(PatchLayer, self).__init__(**kwargs)\n",
@@ -311,7 +311,7 @@
         "\t\tself.layer_norm = layers.LayerNormalization(epsilon=1e-6)\n",
         "\n",
         "\tdef shiftImg(self, images, mode):\n",
-        "\t\t# Build diagonally shifted images\n",
+        "\t\t# Building diagonally-shifted images\n",
         "\t\tif mode == 'left-up':\n",
         "\t\t\tcropheight = self.half_patch\n",
         "\t\t\tcropwidth = self.half_patch\n",
@@ -397,8 +397,7 @@
       "source": [
         "class Embed_Patch(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for projecting patches into a vector. Also adds a learnable\n",
-        "\tposition embedding to the projected vector.\n",
+        "\tLayering for projecting patches into a vector.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(Embed_Patch, self).__init__(**kwargs)\n",
@@ -433,9 +432,9 @@
       "source": [
         "class Multi_Head_AttentionLSA(layers.MultiHeadAttention):\n",
         "\t\"\"\"\n",
-        "\tMulti Head Attention layer for the transformer encoder block, but with the\n",
-        "\taddition of using Local Self Attention to improve finer-level feature\n",
-        "\tlearning.\n",
+        "\tMulti Head Attention layer for the transformer-encoder block, but with the\n",
+        "\taddition of using Local-Self-Attention to improve feature\tlearning.\n",
+        "\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, **kwargs):\n",
         "\t\tsuper(Multi_Head_AttentionLSA, self).__init__(**kwargs)\n",
@@ -464,7 +463,7 @@
         "\t\t\tattention_heads, projection_dim, hidden_units, dropout_rate,\n",
         "\t\t\ttransf_layers, mlp_head_units):\n",
         "\t\"\"\"\n",
-        "\tBuilds the vision transformer model.\n",
+        "\tBuilding the vision transformer.\n",
         "\t\"\"\"\n",
         "\t# Input layer\n",
         "\tinputs = layers.Input(shape=input_shape)\n",
@@ -774,7 +773,7 @@
       "source": [
         "def compileModel():\n",
         "    \"\"\"\n",
-        "    Builds and compiles the model.\n",
+        "    compiles the model.\n",
         "    \"\"\"\n",
         "    # Build and compile model\n",
         "    optimizer = tfa.optimizers.AdamW(\n",
@@ -1041,7 +1040,7 @@
       "source": [
         "def plot_image(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset.\n",
+        "    Ploting image from the given dataset.\n",
         "    \"\"\"\n",
         "    plt.figure(figsize=(5, 5))\n",
         "    datasetIt = dataset.__iter__()\n",
@@ -1053,7 +1052,7 @@
         "\n",
         "def plot_patches(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset after applying Patch_Layer to it.\n",
+        "    Ploting image from the given dataset after applying Patch_Layer to it.\n",
         "    \"\"\"\n",
         "    datasetIt = dataset.__iter__()\n",
         "    image = datasetIt.next()[0][0]\n",
@@ -1164,7 +1163,7 @@
       "source": [
         "def loadData():\n",
         "    \"\"\"\n",
-        "    Loads the dataset that will be used into Tensorflow datasets.\n",
+        "    Loading the dataset.\n",
         "    \"\"\"\n",
         "    trainData = tf.keras.preprocessing.image_dataset_from_directory(\n",
         "        DATA_LOAD_DEST + \"/train\", labels='inferred', label_mode='binary',\n",
@@ -1192,10 +1191,10 @@
         "        lambda x, y: (rotate(flip(zoom(normalize(x)))), y)\n",
         "    )\n",
         "\n",
-        "    # Take half of the 9000 images from the test set as validation data\n",
+        "    # Taking half of the 9000 images from the test set as validation data\n",
         "    validationData = testData.take(len(list(testData))//2)\n",
         "\n",
-        "    # Use remaining 4500 images as test set\n",
+        "    # Using remaining images as test set\n",
         "    testData = testData.skip(len(list(testData))//2)\n",
         "\n",
         "    return trainData, validationData, testData"
@@ -1220,7 +1219,7 @@
       "source": [
         "class PatchLayer(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for shifting inputted images and transforming images into patches.\n",
+        "\tLayering and transforming images into patches.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, img_size, patch_size, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(PatchLayer, self).__init__(**kwargs)\n",
@@ -1320,8 +1319,7 @@
       "source": [
         "class Embed_Patch(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for projecting patches into a vector. Also adds a learnable\n",
-        "\tposition embedding to the projected vector.\n",
+        "\tLayer for projecting patches into a vector.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(Embed_Patch, self).__init__(**kwargs)\n",
@@ -1356,8 +1354,8 @@
       "source": [
         "class Multi_Head_AttentionLSA(layers.MultiHeadAttention):\n",
         "\t\"\"\"\n",
-        "\tMulti Head Attention layer for the transformer encoder block, but with the\n",
-        "\taddition of using Local Self Attention to improve finer-level feature\n",
+        "\tMulti Head Attention layer for the transformer-encoder-block, but with the\n",
+        "\taddition of using Local-Self-Attention to improve feature\n",
         "\tlearning.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, **kwargs):\n",
@@ -1387,7 +1385,7 @@
         "\t\t\tattention_heads, projection_dim, hidden_units, dropout_rate,\n",
         "\t\t\ttransf_layers, mlp_head_units):\n",
         "\t\"\"\"\n",
-        "\tBuilds the vision transformer model.\n",
+        "\tBuilding the vision transformer.\n",
         "\t\"\"\"\n",
         "\t# Input layer\n",
         "\tinputs = layers.Input(shape=input_shape)\n",
@@ -1469,7 +1467,7 @@
       "source": [
         "def compileModel():\n",
         "    \"\"\"\n",
-        "    Builds and compiles the model.\n",
+        "    compiles the model.\n",
         "    \"\"\"\n",
         "    # Build and compile model\n",
         "    optimizer = tfa.optimizers.AdamW(\n",
@@ -1814,7 +1812,7 @@
       "source": [
         "def plot_image(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset.\n",
+        "    Ploting image from the given dataset.\n",
         "    \"\"\"\n",
         "    plt.figure(figsize=(5, 5))\n",
         "    datasetIt = dataset.__iter__()\n",
@@ -1826,7 +1824,7 @@
         "\n",
         "def plot_patches(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset after applying Patch_Layer to it.\n",
+        "    Ploting image from the given dataset after applying Patch_Layer to it.\n",
         "    \"\"\"\n",
         "    datasetIt = dataset.__iter__()\n",
         "    image = datasetIt.next()[0][0]\n",
@@ -2016,7 +2014,7 @@
       "source": [
         "def loadData():\n",
         "    \"\"\"\n",
-        "    Loads the dataset that will be used into Tensorflow datasets.\n",
+        "    Loading the dataset.\n",
         "    \"\"\"\n",
         "    trainData = tf.keras.preprocessing.image_dataset_from_directory(\n",
         "        DATA_LOAD_DEST + \"/train\", labels='inferred', label_mode='binary',\n",
@@ -2044,10 +2042,10 @@
         "        lambda x, y: (rotate(flip(zoom(normalize(x)))), y)\n",
         "    )\n",
         "\n",
-        "    # Take half of the 9000 images from the test set as validation data\n",
+        "    # Taking half of the 9000 images from the test set as validation data\n",
         "    validationData = testData.take(len(list(testData))//2)\n",
         "\n",
-        "    # Use remaining 4500 images as test set\n",
+        "    # Using remaining images as test set\n",
         "    testData = testData.skip(len(list(testData))//2)\n",
         "\n",
         "    return trainData, validationData, testData"
@@ -2072,7 +2070,7 @@
       "source": [
         "class PatchLayer(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for shifting inputted images and transforming images into patches.\n",
+        "\tLayering and transforming images into patches.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, img_size, patch_size, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(PatchLayer, self).__init__(**kwargs)\n",
@@ -2172,8 +2170,7 @@
       "source": [
         "class Embed_Patch(Layer):\n",
         "\t\"\"\"\n",
-        "\tLayer for projecting patches into a vector. Also adds a learnable\n",
-        "\tposition embedding to the projected vector.\n",
+        "\tLayer for projecting patches into a vector.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, num_patches, projection_dim, **kwargs):\n",
         "\t\tsuper(Embed_Patch, self).__init__(**kwargs)\n",
@@ -2208,8 +2205,8 @@
       "source": [
         "class Multi_Head_AttentionLSA(layers.MultiHeadAttention):\n",
         "\t\"\"\"\n",
-        "\tMulti Head Attention layer for the transformer encoder block, but with the\n",
-        "\taddition of using Local Self Attention to improve finer-level feature\n",
+        "\tMulti Head Attention layer for the transformer-encoder-block, but with the\n",
+        "\taddition of using Local-Self-Attention to improve feature\n",
         "\tlearning.\n",
         "\t\"\"\"\n",
         "\tdef __init__(self, **kwargs):\n",
@@ -2239,7 +2236,7 @@
         "\t\t\tattention_heads, projection_dim, hidden_units, dropout_rate,\n",
         "\t\t\ttransf_layers, mlp_head_units):\n",
         "\t\"\"\"\n",
-        "\tBuilds the vision transformer model.\n",
+        "\tBuilding the vision transformer.\n",
         "\t\"\"\"\n",
         "\t# Input layer\n",
         "\tinputs = layers.Input(shape=input_shape)\n",
@@ -2446,7 +2443,7 @@
       "source": [
         "def compileModel():\n",
         "    \"\"\"\n",
-        "    Builds and compiles the model.\n",
+        "    compiles the model.\n",
         "    \"\"\"\n",
         "    # Build and compile model\n",
         "    optimizer = tfa.optimizers.AdamW(\n",
@@ -2695,7 +2692,7 @@
       "source": [
         "def plot_image(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset.\n",
+        "    Ploting image from the given dataset.\n",
         "    \"\"\"\n",
         "    plt.figure(figsize=(5, 5))\n",
         "    datasetIt = dataset.__iter__()\n",
@@ -2707,7 +2704,7 @@
         "\n",
         "def plot_patches(dataset):\n",
         "    \"\"\"\n",
-        "    Plots an image from the given dataset after applying Patch_Layer to it.\n",
+        "    Ploting image from the given dataset after applying Patch_Layer to it.\n",
         "    \"\"\"\n",
         "    datasetIt = dataset.__iter__()\n",
         "    image = datasetIt.next()[0][0]\n",
@@ -2748,7 +2745,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPz5VKieTjO0vAl4AEdyu/J",
+      "authorship_tag": "ABX9TyOcZ7J7pISQjn/D/Wkfv50/",
       "include_colab_link": true
     },
     "kernelspec": {
