cleaned up files, done hyperparameter tuning, added conv layer (1 of 2 kinds) to go in front of the model

--- a/recognition/vision-transformer-4696689/old/model.ipynb
+++ b/recognition/vision-transformer-4696689/old/model.ipynb
@@ -72,6 +72,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a5e050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Inception module for efficient 7x7 convolution\n",
+    "\"\"\"\n",
+    "class Inception(nn.Module):\n",
+    "    def __init__(self, dimin, dimout):\n",
+    "        super().__init__()\n",
+    "        self.branch1 = nn.Sequential(\n",
+    "            nn.Conv2d(dimin, dimout[0], 1, stride=(1,1)),\n",
+    "            nn.Conv2d(dimout[0], dimout[0], 3, stride=(1,1), padding=1),\n",
+    "            nn.Conv2d(dimout[0], dimout[0], 3, stride=(1,1), padding=1)\n",
+    "        )\n",
+    "        self.branch2 = nn.Sequential(\n",
+    "            nn.Conv2d(dimin, dimout[1]), 1, stride=(1,1),\n",
+    "            nn.Conv2d(dimout[1], dimout[1], 3, stride=(1,1), padding=1)\n",
+    "        )\n",
+    "        self.branch3 = nn.Sequential(\n",
+    "            nn.AvgPool2d(3, stride=(1,1), padding=1),\n",
+    "            nn.Conv2d(dimin, dimout[2], 1, stride=(1,1))\n",
+    "        )\n",
+    "        self.branch4 = nn.Sequential(\n",
+    "            nn.Conv2d(dimin, dimout[3], 1, stride=(1,1))\n",
+    "        )\n",
+    "    def forward(self, imgs)\n",
+    "        x1 = self.branch1(imgs)\n",
+    "        x2 = self.branch2(imgs)\n",
+    "        x3 = self.branch3(imgs)\n",
+    "        x4 = self.branch4(imgs)\n",
+    "        return torch.cat([x1, x2, x3, x4], dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "e6ac9e2b",
    "metadata": {},
